fix: on smaller screens when hiding logo set display none so that it will not cover the grid

--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -2090,7 +2090,7 @@ input {
 	}
 }
 
-@media only screen and (max-width: 410px) {
+@media (max-height: 700px) and (orientation: landscape) {
 	#brandlogo {
 		display: none;
 	}
